2018-January-01 Struan Robertson

		* gStructure.h/.cpp, ClassicalCoupledRotors.cpp, TMatrix.h: For coupled rotors, take advantage
		of the positive definite nature of the GRIT by using the Cholesky decomposition to get the root
		of the determinant.

2017-December-20 Struan Robertson

		* ConditionsManager.cpp: Temporary fix for multiple excess reactant concentrations.

2017-December-10 Struan Robertson

		* MesmerILT.cpp: Added improved warning regarding the value of n_inf.

		* CollisionOperator.cpp: Added improved warning regarding uncoupled systems.

		* Documentation: Minor update.

2017-November-29 Struan Robertson

		* CanonicalRateCoefficient.cpp: Addition of the CanonicalRateCoefficient class. This 
		class is a dummy MicroRateCalculator that it is used in conjunction with the irreversible 
		exchange reaction class to give a loss rate coefficient. This is usually used in the 
		situations where there are competing association and bimolecular reactions that remove 
		the same, deficient, species.

2017-November-26 Struan Robertson

		* IrreversibleExchangeReaction.cpp: Further changes to irreversible exchange reaction type
		to allow for simple canonical rate expressions.

		* examples/*.xml: All example input files altered to use "RRKM" rather than "SimpleRRKM".

2017-November-25 Struan Robertson

		* IrreversibleExchangeReaction.cpp/.h: Further simplification of the 
		irreversible exchange reaction type in preparation for the addition of new canonical
		terms.

		* MesmerQA/*.xml: All MesmerQA input files altered to use "RRKM" rather than "SimpleRRKM".

2017-November-22 Struan Robertson

		* IrreversibleExchangeReaction.cpp/.h, benzene_oxidation_test.xml: Correction and tidy-up of 
		irreversible exchange reaction type and example in preparation for the addition of new canonical
		terms.

2017-November-02 Chris Morley

    * mesmer1.xsl, rawdataplot.xsl: display rawdata plots